Floating Action Button
Change Image Button to Floating Action Button

--- a/xyzreader/XYZReader/src/main/res/values/colors.xml
+++ b/xyzreader/XYZReader/src/main/res/values/colors.xml
@@ -24,4 +24,7 @@
     <color name="accent">#40C4FF</color>
     <color name="text_primary">#DE000000</color>
     <color name="text_secondary">#8A000000</color>
+
+    <color name="grayish">#333333</color>
+    <color name="white">#ffffff</color>
 </resources>
